--- a/MovieDB/views/MoviesList.html
+++ b/MovieDB/views/MoviesList.html
@@ -1,1 +1,50 @@
-<h1>MOVIES LIST</h1>
+<div ng-controller="MoviesListController">
+	
+	<h1>MOVIES LIST</h1>
+	
+	<div class="jumbotron" ng-show="uiState=='blank'">
+		<p class="lead">No data here</p>
+	</div>
+
+	<div class="alert alert-danger" ng-show="uiState=='error'">
+		Error While loading data
+	</div>
+
+	<div class="progress" ng-show="uiState=='loading'">
+	  <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
+	  </div>
+	</div>
+
+	<table class="table table-striped" ng-show="uiState =='ideal'"> 
+
+		<thead>		
+			<tr>
+				<th>Poster</th>
+				<th>Title</th>
+				<th>Year</th>
+				<th>Rating</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr ng-repeat="item in model">
+				<td>
+					<img ng-src="{{::item.poster_url}}" alt="{{::item.title}}'s poster" title="{{::item.title}}" width="100">
+				</td>
+				<td>
+					{{::item.title}}
+				</td>
+				<td>
+					{{::item.release_data}}
+				</td>
+				<td>
+					{{::item.rating}}
+				</td>
+
+			</tr>
+		</tbody>
+
+	</table>
+
+</div>
+
