--- a/MovieDB/views/MoviesList.html
+++ b/MovieDB/views/MoviesList.html
@@ -10,10 +10,7 @@
 		Error While loading data
 	</div>
 
-	<div class="progress" ng-show="uiState=='loading'">
-	  <div class="progress-bar progress-bar-striped active" role="progressbar" style="width: 100%">
-	  </div>
-	</div>
+	<div ng-include"'views/Progress.html'" ng-show="uiState=='loading'"></div>
 
 	<table class="table table-striped" ng-show="uiState =='ideal'"> 
 
@@ -23,6 +20,7 @@
 				<th>Title</th>
 				<th>Year</th>
 				<th>Rating</th>
+
 			</tr>
 		</thead>
 
@@ -42,6 +40,11 @@
 				<td>
 					{{::item.rating}}
 					({{::item.rating | schoolrating:"US"}})
+				</td>
+				<td>
+					<a href="#{{::getMovieDetailURL(item)}}" class="btn btn-default">
+						View
+					</a>
 				</td>
 
 			</tr>
