Terminado el Lunes

--- a/MovieDB/views/SeriesList.html
+++ b/MovieDB/views/SeriesList.html
@@ -1,6 +1,18 @@
 <div ng-controller="SeriesListController">
 	
 	<h1>SERIES LIST</h1>
+	
+	<div class="jumbotron" ng-show="uiState=='blank'">
+		<p class="lead">No data here</p>
+	</div>
+
+	<div class="alert alert-danger" ng-show="uiState=='error'">
+		Error While loading data
+	</div>
+
+	<div ng-include"'views/Progress.html'" ng-show="uiState=='loading'"></div>
+
+	<media-item-list items="model" get-detail-url="getSerieDetailURL(stuff)" ng-show="uiState =='ideal'"></media-item-list>	
 </div>
 
 
