--- a/MovieDB/views/MoviesList.html
+++ b/MovieDB/views/MoviesList.html
@@ -12,7 +12,7 @@
 
 	<div ng-include"'views/Progress.html'" ng-show="uiState=='loading'"></div>
 
-	<media-item-list items="model" get-detail-url="getMovieDetailURL" ng-show="uiState =='ideal'"></media-item-list>		
+	<media-item-list items="model" get-detail-url="getMovieDetailURL(stuff)" ng-show="uiState =='ideal'"></media-item-list>		
 
 </div>
 
