--- a/MovieDB/views/mediaItemList.html
+++ b/MovieDB/views/mediaItemList.html
@@ -6,12 +6,15 @@
 			<th>Title</th>
 			<th>Year</th>
 			<th>Rating</th>
+			<th>
+				<input type="search" ng-model="query.title" placeholder="Search..." class="form-control">
+			</th>
 
 		</tr>
 	</thead>
 
 	<tbody>
-		<tr ng-repeat="item in model">
+		<tr ng-repeat="item in model | filter:query">
 			<td>
 				<img ng-src="{{::item.poster_url}}" alt="{{::item.title}}'s poster" title="{{::item.title}}" width="100">
 			</td>
@@ -28,7 +31,7 @@
 				({{::item.rating | schoolrating:"US"}})
 			</td>
 			<td>
-				<a href="#{{::getDetailUrl(item) }}" class="btn btn-default">
+				<a href="#{{::getDetailUrl({stuff: item}) }}" class="btn btn-default">
 					View
 				</a>
 			</td>
